Name: hellnet
Version: 0.1
Synopsis: Anonymous content distribution network
Author: Voker57
Maintainer: voker57@gmail.com
Build-type: Simple
Cabal-version: >= 1.2
library
 Exposed-Modules: Hellnet
  Hellnet.Files
  Hellnet.Utils
  Hellnet.Storage
  Hellnet.Network
  Hellnet.URI
 Build-Depends: base >= 4.2, Crypto, bytestring, pretty, filepath, directory, haskell98, HTTP >= 4000, hjpath >= 2.0, hjson >= 1.1, safe >= 0.2, old-locale, time, unix, parsec, random, process, utf8-string, RSA, uri >= 0.1.2
Executable hell-insert
 Main-is: hell-insert.hs
 Build-Depends: base
Executable hell-get
 Main-is: hell-get.hs
 Build-Depends: regex-posix
Executable hell-nodes
 Main-is: hell-nodes.hs
 Build-Depends: base
Executable hell-serve
 Main-is: hell-serve.hs
 Build-depends: Lucu >0.4.1, network, mtl, containers
